--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,8 @@ name: 'Terraform'
 on:
   push:
     branches: [ "main" ]
-  pull_request:
+    paths:
+      - 'terraform/**'
 
 permissions:
   contents: read
