--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,6 +23,7 @@ env:
   SECRET_ID: ${{vars.SECRET_ID}}
   INSTALLATION_ID: ${{vars.INSTALLATION_ID}}
   META_API_SECRET_ID: ${{vars.META_API_SECRET_ID}}
+  META_PIPELINE_BUCKET_URI: ${{vars.META_PIPELINE_BUCKET_URI}}
 
 
 jobs:
@@ -62,7 +63,7 @@ jobs:
       
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false -var="project_id=${{env.PROJECT_ID}}" -var="region=${{env.REGION}}" -var="project_number=${{env.PROJECT_NUMBER}}" -var="service_account_id=${{env.SERVICE_ACCOUNT_EMAIL}}" -var="org_id=${{env.ORG_ID}}" -var="pool_id=${{env.POOL_ID}}" -var="repo=${{env.REPO}}" -var "cloud_build_github_pat=${{ secrets.CLOUD_BUILD_GITHUB_PAT }}" -var "secret_id=${{env.SECRET_ID}}" -var "installation_id=${{env.INSTALLATION_ID}}" -var "remote_uri=${{env.REMOTE_URI}}" -var "meta_api_secret_id=${{env.META_API_SECRET_ID}}" -var "meta_api_token=${{secrets.META_API_TOKEN}}"
+      run: terraform plan -input=false -var="project_id=${{env.PROJECT_ID}}" -var="region=${{env.REGION}}" -var="project_number=${{env.PROJECT_NUMBER}}" -var="service_account_id=${{env.SERVICE_ACCOUNT_EMAIL}}" -var="org_id=${{env.ORG_ID}}" -var="pool_id=${{env.POOL_ID}}" -var="repo=${{env.REPO}}" -var "cloud_build_github_pat=${{ secrets.CLOUD_BUILD_GITHUB_PAT }}" -var "secret_id=${{env.SECRET_ID}}" -var "installation_id=${{env.INSTALLATION_ID}}" -var "remote_uri=${{env.REMOTE_URI}}" -var "meta_api_secret_id=${{env.META_API_SECRET_ID}}" -var "meta_api_token=${{secrets.META_API_TOKEN}}" -var "meta_compiled_pipeline_bucket_uri=${{env.META_PIPELINE_BUCKET_URI}}"
       working-directory: terraform
     
 
@@ -102,5 +103,5 @@ jobs:
       working-directory: terraform
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false -var="project_id=${{env.PROJECT_ID}}" -var="region=${{env.REGION}}" -var="project_number=${{env.PROJECT_NUMBER}}" -var="service_account_id=${{env.SERVICE_ACCOUNT_EMAIL}}" -var="org_id=${{env.ORG_ID}}" -var="pool_id=${{env.POOL_ID}}" -var="repo=${{env.REPO}}" -var "cloud_build_github_pat=${{ secrets.CLOUD_BUILD_GITHUB_PAT }}" -var "secret_id=${{env.SECRET_ID}}" -var "installation_id=${{env.INSTALLATION_ID}}" -var "remote_uri=${{env.REMOTE_URI}}" -var "meta_api_secret_id=${{env.META_API_SECRET_ID}}" -var "meta_api_token=${{secrets.META_API_TOKEN}}"
+      run: terraform apply -auto-approve -input=false -var="project_id=${{env.PROJECT_ID}}" -var="region=${{env.REGION}}" -var="project_number=${{env.PROJECT_NUMBER}}" -var="service_account_id=${{env.SERVICE_ACCOUNT_EMAIL}}" -var="org_id=${{env.ORG_ID}}" -var="pool_id=${{env.POOL_ID}}" -var="repo=${{env.REPO}}" -var "cloud_build_github_pat=${{ secrets.CLOUD_BUILD_GITHUB_PAT }}" -var "secret_id=${{env.SECRET_ID}}" -var "installation_id=${{env.INSTALLATION_ID}}" -var "remote_uri=${{env.REMOTE_URI}}" -var "meta_api_secret_id=${{env.META_API_SECRET_ID}}" -var "meta_api_token=${{secrets.META_API_TOKEN}}" -var "meta_compiled_pipeline_bucket_uri=${{env.META_PIPELINE_BUCKET_URI}}"
       working-directory: terraform
